# TrustOS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  PACT.md  README.md  ROADMAP.md  SECURITY.md  SIGNATURES.md  SYSTEM_SOUNDS_ROADMAP.md  analyze_mp3.py  auto-debug.ps1  auto-test-desktop.ps1  auto-test-ultimate.ps1  auto-test-vbox.ps1  auto-test.ps1  browser_test_results.txt  build-limine.ps1  build-multiarch.ps1  build-test-aarch64.ps1  build-trustos-jarvispack.ps1  build-trustos.ps1  build.sh  build_err.txt  build_err_latest.txt  build_err_smp.txt  build_full.txt  build_output2.txt  convert_logo.py  copilot-mentor.py  debug-serial2.ps1  debug-vm-serial2.ps1  desktop_test_report.txt  flash-usb.ps1  google_scan_report.txt  inttest_debug_output.txt  (+60 more)
crates/mbedtls-platform-support/: Cargo.toml  build.rs
crates/mbedtls-platform-support/src/: lib.rs  self_test.rs
kernel/: Cargo.toml  build.rs  linker-android.ld  linker-riscv64.ld  linker.ld  x86_64-bestdows.json
kernel/.cargo/: config.toml
kernel/mbedtls-include/: assert.h  stddef.h  stdio.h  stdlib.h  string.h  time.h
kernel/roms/: README.md
kernel/src/: accessibility.rs  android_boot.rs  android_main.rs  apic.rs  auth.rs  c_runtime.rs  chess.rs  chess3d.rs  compositor.rs  crt_scanline.rs  desktop.rs  devtools.rs  disk.rs  draw_utils.rs  ed25519.rs  elf.rs  exec.rs  file_assoc.rs  formula3d.rs  game3d.rs  game_lab.rs  gdt.rs  gesture.rs  ghost_mesh.rs  gpu_emu.rs  holovolume.rs  httpd.rs  icons.rs  init.rs  installer.rs  keyboard.rs  logo_bitmap.rs  main.rs  matrix_fast.rs  mbedtls_alloc.rs  mobile.rs  model_editor.rs  mouse.rs  network.rs  nvme.rs  (+26 more)
kernel/src/acpi/: fadt.rs  madt.rs  mcfg.rs  mod.rs  tables.rs
kernel/src/apps/: binary_viewer.rs  calculator.rs  mod.rs  text_editor.rs
kernel/src/arch/aarch64/: boot.rs  interrupts.rs  mod.rs  syscall_arch.rs  timer.rs  vectors.rs
kernel/src/arch/riscv64/: boot.rs  context.rs  memory.rs  mod.rs  (+3 more)
kernel/src/audio/: mod.rs  player.rs  synth.rs
kernel/src/binary_analysis/: disasm.rs  mod.rs
kernel/src/browser/: css_parser.rs  js_engine.rs  mod.rs  renderer.rs  url.rs
kernel/src/coremark/: mod.rs
kernel/src/cosmic/: theme.rs  widgets.rs
kernel/src/cpu/: aesni.rs  features.rs  mod.rs  simd.rs  smp.rs  tsc.rs
kernel/src/debug/: mod.rs  netconsole.rs  remoteshell.rs
kernel/src/drivers/: ahci.rs  ata.rs  audio_sync.rs  checkm8.rs  hda.rs  input.rs  mod.rs  partition.rs  pci_ids.rs  usb.rs  usb_storage.rs  virtio_gpu.rs  xhci.rs
kernel/src/framebuffer/: font.rs  logo.rs  mod.rs
kernel/src/graphics/: compositor.rs  desktop_gfx.rs  fast_render.rs  gui_renderer.rs  holomatrix.rs  math3d.rs  mod.rs  opengl.rs  raytracer.rs  render2d.rs  render3d.rs  scaling.rs  simd.rs
kernel/src/gui/: engine.rs  mod.rs  vsync.rs  windows11.rs
kernel/src/hwdiag/: acpi_battery.rs  acpi_dump.rs  boot_timing.rs  cpu_deep.rs  edid.rs  efi_vars.rs  html_report.rs  ioscan.rs  mem_test.rs  mod.rs  net_hw.rs  pci_aer.rs  pci_deep.rs  pci_raw.rs  regdiff.rs  regwatch.rs  remote.rs  smart.rs  smbios.rs  storage.rs  stress.rs  thermal.rs
kernel/src/hwscan/: gpio.rs  mod.rs  report.rs  timing.rs
kernel/src/hypervisor/: acpi.rs  api.rs  backend.rs  branding.rs  ept.rs  guests.rs  hpet.rs  ioapic.rs  linux_loader.rs  linux_subsystem.rs  linux_vm.rs  mmio.rs  mod.rs  pci.rs  svm_vm.rs  tests.rs  virtio_blk.rs  virtio_console.rs  vm.rs  vmcs.rs  vmx.rs  vpid.rs
kernel/src/image/: bmp.rs  mod.rs  ppm.rs
kernel/src/interrupts/: handlers.rs  mod.rs  pic.rs  syscall.rs
kernel/src/ipc/: channel.rs  message.rs  mod.rs
kernel/src/jarvis/: agent.rs  backprop.rs  compute.rs  corpus.rs  corpus_backup.rs  guardian.rs  inference.rs  mentor.rs  mesh.rs  micro_model.rs  mod.rs  model.rs  optimizer.rs  simd.rs  tokenizer.rs  training.rs
kernel/src/jarvis_hw/: mod.rs
kernel/src/lab_mode/: demo.rs  editor.rs  filetree.rs  guide.rs  hardware.rs  kernel_trace.rs  mod.rs  network_panel.rs  pipeline.rs  trace_bus.rs  ux_test.rs  vm_inspector.rs
kernel/src/linux/: rootfs.rs  tar.rs
kernel/src/linux_compat/: loader.rs  mod.rs  runtime.rs  syscall.rs
kernel/src/mario64/: animation.rs  camera.rs  collision.rs  enemies.rs  hud.rs  level.rs  mod.rs  objects.rs  physics.rs  player.rs  renderer.rs  tas.rs
kernel/src/marionet/: autodump.rs  mod.rs  probe.rs  render.rs
kernel/src/memory/: cow.rs  frame.rs  heap.rs  mod.rs  paging.rs  swap.rs
kernel/src/netscan/: discovery.rs  mod.rs  port_scanner.rs  sniffer.rs  vuln.rs
kernel/src/netstack/: arp.rs  dhcp.rs  dhcpd.rs  dns.rs  firewall.rs  http.rs  https.rs  icmp.rs  ip.rs  ipv6.rs  mod.rs  socket.rs  tcp.rs  tftpd.rs  udp.rs
kernel/src/riscv_translator/: ir.rs  x86_decoder.rs
kernel/src/sandbox/: container.rs  fs.rs  mod.rs  net_proxy.rs
kernel/src/scheduler/: mod.rs
kernel/src/security/: capability.rs  cpu_features.rs  mod.rs  policy.rs  storage.rs
kernel/src/shell/: apps.rs  commands.rs  desktop.rs  editor.rs  jarvis.rs  mod.rs  network.rs  scripting.rs  trailer.rs  unix.rs  vm.rs
kernel/src/stubs/: acpi.rs  apic.rs  cpu.rs  hypervisor.rs  linux_vm.rs  signals.rs  simd.rs  smp.rs  tests.rs  tsc.rs  userland.rs  vmx.rs
kernel/src/sync/: futex.rs  mod.rs  percpu.rs  rwlock.rs
kernel/src/syscall/: linux.rs  mod.rs
kernel/src/theme/: bmp.rs
kernel/src/tls13/: crypto.rs  handshake.rs  mod.rs  record.rs
kernel/src/trace/: mod.rs
kernel/src/trustdaw/: audio_viz.rs  beat_studio.rs  disk_audio.rs  keyboard_midi.rs  mixer.rs  mod.rs  ui.rs
kernel/src/trustlang/: compiler.rs  mod.rs  native.rs  tests.rs  vm.rs
kernel/src/vfs/: block_cache.rs  devfs.rs  ext4.rs  fat32.rs  mod.rs  ntfs.rs  procfs.rs  trustfs.rs  wal.rs
kernel/src/video/: codec.rs  mod.rs  player.rs
kernel/src/wayland/: mod.rs  protocol.rs
kernel/src/woa/: camera.rs  effects.rs  engine.rs  input.rs  militant_sprite_data.rs  mod.rs  renderer.rs  sprites.rs
translated/educational-fr/: Cargo.toml  DO_NOT_EDIT.md  mapping.json
userland/pixlens/: COMMANDS.md  Cargo.toml  demo.ps1
userland/pixlens/src/: main.rs
(+2155 files in other folders)
