[workspace]
resolver = "2"
members = [
    "kernel",
    "userland/trustos-syscall",
    "userland/init",
    "userland/hello-rust",
    "userland/shell",
    "userland/fs",
    "userland/network",
    "userland/jarvis",
    "userland/compositor",
]
exclude = [
    "debugonly",
    "sdk",
    "sdk/trustos-rt",
    "sdk/examples/hello",
    "sdk/examples/syscall-test",
    "jarvis-bench",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Nated0ge <nathan@trustos.dev>"]
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

# Fast iteration profile for hardware debug (no LTO, ~10-15s builds)
# Usage: cargo build --profile release-dev -p trustos_kernel
[profile.release-dev]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true

[patch.crates-io]
mbedtls-platform-support = { path = "crates/mbedtls-platform-support" }
