[workspace]
resolver = "2"
members = ["kernel"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Nated0ge <nathan@trustos.dev>"]
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[patch.crates-io]
mbedtls-platform-support = { path = "crates/mbedtls-platform-support" }